--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,4 +1,4 @@
-##  Named of the workflow.
+##  Name of the workflow.
 name: Pytest
 
 ## Set the trigger policy.
@@ -22,7 +22,7 @@ jobs:
       ## Use the public `checkout` action  in version v2  
       ## to checkout the existing code in the repository
     - uses: actions/checkout@v2
-      ## Use the public `setup-python` actoin  in version v2  
+      ## Use the public `setup-python` action  in version v2  
       ## to install python on the Ubuntu based environment.
       ## Additionally, it ensures to loop through all 
       ## the defined Python versions.
@@ -37,7 +37,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install  pytest 
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    ## Run all pytests by inovking the `pytest command`
+    ## Run all pytests by invoking the `pytest command`
     - name: Test with pytest
       run: |
         pytest
